fix für das erkennen der Berechtigungen

--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/authorities/system-authorities.compontent.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/authorities/system-authorities.compontent.html
@@ -1,1 +1,11 @@
-<terra-multi-check-box [(ngModel)]="values"></terra-multi-check-box>
+<div class="save-button">
+    <terra-button [inputCaption]="'Berechtigungen speichern'"
+                  [inputIcon]="'icon-save'"
+                  (outPutClicked)="saveBerechtigungen()">
+    
+    </terra-button>
+</div>
+
+<div>
+    <terra-multi-check-box [(ngModel)]="values"></terra-multi-check-box>
+</div>
