--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/user/system-user.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/user/system-user.component.html
@@ -24,7 +24,7 @@
                         [inputCaption]="'Einkäufer'">
         </terra-checkbox>
         <terra-portlet [inputPortletHeader]="'Berechtigungen'">
-            <system-authorities [userId]="routeData.user.id"></system-authorities>
+            <system-authorities [userId]="routeData.user.id" [user]="routeData.user"></system-authorities>
         </terra-portlet>
     </terra-portlet>
 </ng-container>
