--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/authorities/system-authorities.compontent.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/authorities/system-authorities.compontent.html
@@ -1,11 +1,18 @@
-<div class="save-button">
-    <terra-button [inputCaption]="'Berechtigungen speichern'"
-                  [inputIcon]="'icon-save'"
-                  (outPutClicked)="saveBerechtigungen()">
-    
-    </terra-button>
-</div>
+<ng-container *ngIf="routeData$ | async as routeData">
 
-<div>
-    <terra-multi-check-box [(ngModel)]="values"></terra-multi-check-box>
-</div>
+<terra-portlet [inputPortletHeader]="'Berechtigungen'">
+    
+    <div class="save-button">
+        <terra-button [inputCaption]="'Berechtigungen speichern'"
+                      [inputIcon]="'icon-save'"
+                      (outputClicked)="saveBerechtigungen()">
+        
+        </terra-button>
+    </div>
+    
+    <div>
+        <terra-multi-check-box [(ngModel)]="values"></terra-multi-check-box>
+    </div>
+    
+</terra-portlet>
+</ng-container>
