zeige die bestandserfassung nicht wenn der zielort gesperrt ist

--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/bestaende/system-bestaende.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/bestaende/system-bestaende.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="routeData$ | async as routeData">
-    <terra-portlet>
+    <terra-portlet *ngIf="!gesperrt">
         <terra-button [inputCaption]="'Bestand erfassen'"
                       [inputIcon]="'icon-save'"
                       (outputClicked)="addBestand()">
