--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/targetplaces/system-targetplaces.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/targetplaces/system-targetplaces.component.html
@@ -28,6 +28,6 @@
     </terra-portlet>
     
     <terra-portlet [inputPortletHeader]="'Bestände'">
-                <system-bestaende [zielortId]="routeData.targetPlace.id"></system-bestaende>
+                <system-bestaende [zielortId]="routeData.targetPlace.id" [gesperrt]="routeData.targetPlace.erfasst"></system-bestaende>
     </terra-portlet>
 </ng-container>
