--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
@@ -23,7 +23,8 @@
                         <div class="input-group-append">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        <input type="password"
+                        <input id="password"
+                                type="password"
                                name="password"
                                class="form-control input_pass"
                                value=""
@@ -33,7 +34,7 @@
                 </form>
             </div>
             <div class="d-flex justify-content-center mt-3 login_container">
-                <button type="button" name="button" class="btn login_btn" (click)="login()">Login</button>
+                <button id="login-button" type="button" name="button" class="btn login_btn" (click)="login()">Login</button>
             </div>
 <!--            <div class="mt-4">-->
 <!--                <div class="d-flex justify-content-center links">-->
