- some minor fixes

--- a/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
@@ -18,7 +18,7 @@
                    [inputCollapsed]="false"
                    [inputPortletHeader]="'Letzte Buchungen'">
         <div *ngFor="let buchung of _buchungen">
-            <span></span>
+            <span>{{buchung.benutzer}} hat am {{buchung.date}} die Positionen {{buchung.positionen}} von {{buchung.von}} nach {{buchung.nach}} gebucht!</span>
         </div>
     </terra-portlet>
 </div>
