feature (aot and angular cli): added building with angular cli and compiling with aot to the project
später muss ich dann noch die variablen wieder mit vernünftigen access modifiern versehen

--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/categories/system-categories.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/categories/system-categories.component.html
@@ -17,6 +17,6 @@
     </terra-portlet>
     
     <terra-portlet [inputPortletHeader]="'Größen'">
-        <system-groessen [categoryId]="routeData.category.id" [alert]="alert"></system-groessen>
+        <system-groessen [categoryId]="routeData.category.id"></system-groessen>
     </terra-portlet>
 </ng-container>
