--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/targetplaces/system-targetplaces.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/targetplaces/system-targetplaces.component.html
@@ -10,7 +10,7 @@
                       (outputClicked)="delete(routeData.targetPlace)"
                       [inputIsDisabled]="routeData.targetPlace.erfasst">
         </terra-button>
-        <terra-button [inputIcon]="'icon-visibility_private'"
+        <terra-button [inputIcon]="'icon-visibility_public'"
                       [inputCaption]="'Für Erfassung sperren'"
                       (outputClicked)="lock(routeData.targetPlace)"
                       [inputIsDisabled]="routeData.targetPlace.erfasst">
