--- a/wbs-alarm/wbs-frontend/src/app/views/start/start.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/start/start.component.scss
@@ -37,15 +37,53 @@ img
 .infos
 {
     width: 100%;
-    
-    terra-portlet
-    {
-        width: 40%;
-        float: left;
-    }
+    display: inline-block;
 }
 
 .bottom-line
 {
     width: 20%;
+}
+
+.panel
+{
+    float: left;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 400px)
+{
+    .panel
+    {
+        width: 100%;
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px)
+{
+    .panel
+    {
+        width: 100%;
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px)
+{
+    .panel
+    {
+        width: 45%;
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px)
+{
+    .panel
+    {
+        width: 45%;
+    }
 }
