--- a/wbs-alarm/wbs-frontend/src/app/views/booking/booking-view.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/booking/booking-view.component.scss
@@ -18,3 +18,31 @@
     width: 100%;
     padding-top: 20px;
 }
+
+mat-radio-button
+{
+    margin-right: 10px;
+}
+
+mat-expansion-panel
+{
+    margin-bottom: 10px;
+}
+
+mat-form-field
+{
+    margin-right: 10px;
+
+    input
+    {
+        font-size: 18px !important;
+        margin: 0 !important;
+        line-height: 2.6 !important;
+    }
+}
+
+terra-number-input
+{
+    padding-top: 3px;
+}
+
