- refactored booking view component

--- a/wbs-alarm/wbs-frontend/src/app/views/booking/booking-view.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/booking/booking-view.component.scss
@@ -19,6 +19,11 @@
     padding-top: 20px;
 }
 
+.action
+{
+    margin-right: 10px;
+}
+
 mat-radio-button
 {
     margin-right: 10px;
@@ -44,5 +49,15 @@ mat-form-field
 terra-number-input
 {
     padding-top: 3px;
+}
+
+.warenkorb
+{
+    width: 100%;
+}
+
+.overview .save-button
+{
+    margin-top: 15px;
 }
 
