--- a/wbs-alarm/wbs-frontend/src/app/views/booking/booking-view.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/booking/booking-view.component.html
@@ -78,54 +78,75 @@
     </div>
 </mat-expansion-panel>
 
-<!--<terra-portlet>-->
-<!--    <div class="headline">-->
-<!--        <terra-select-box class=element-->
-<!--                          [inputName]="'Kategorie:'"-->
-<!--                          [inputListBoxValues]="_kategorien"-->
-<!--                          [(ngModel)]="_kategorie"-->
-<!--                          (ngModelChange)="fuelleGroesse(_kategorie)">-->
-<!--        </terra-select-box>-->
-<!--        <terra-select-box class=element-->
-<!--                          [inputName]="'Größe:'"-->
-<!--                          [inputIsDisabled]="_groessen.length === 0"-->
-<!--                          [inputListBoxValues]="_groessen"-->
-<!--                          [(ngModel)]="_goresse">-->
-<!--        </terra-select-box>-->
-<!--        <terra-number-input class=element-->
-<!--                            [inputName]="'Anzahl'"-->
-<!--                            [(ngModel)]="_anzahl">-->
-<!--        -->
-<!--        </terra-number-input>-->
-<!--    </div>-->
-<!--</terra-portlet>-->
-
 <div>
-    <terra-button inputCaption="In die Liste"
-                  (outputClicked)="addRow()">
-    </terra-button>
-    
-    <terra-button inputCaption="Auswahl löschen"
-                  [inputIcon]="'icon-delete'"
-                  (outputClicked)="deleteRow()">
-    </terra-button>
+    <button class="mr-2" mat-raised-button (click)="addRow()">In die Liste</button>
+    <button class="mr-2" mat-raised-button (click)="deleteRows()" color="warn">Auswahl löschen</button>
 </div>
 
 <div class="overview">
-    <terra-simple-table #table
-                        [inputIsStriped]="true"
-                        [inputHasCheckboxes]="true"
-                        [inputUseHighlighting]="true"
-                        [inputHeaderList]="_headerList"
-                        [inputRowList]="_rowList"
-                        (outputHighlightedRowChange)="selectRow($event)">
-    </terra-simple-table>
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 warenkorb">
+
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null"
+                              [checked]="selection.hasValue() && isAllSelected()"
+                              [indeterminate]="selection.hasValue() && !isAllSelected()">
+                </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+                <mat-checkbox (click)="$event.stopPropagation()"
+                              (change)="$event ? selection.toggle(row) : null"
+                              [checked]="selection.isSelected(row)">
+                </mat-checkbox>
+            </td>
+        </ng-container>
+
+        <!-- Von Column -->
+        <ng-container matColumnDef="von">
+            <th mat-header-cell *matHeaderCellDef> Von </th>
+            <td mat-cell *matCellDef="let element"> {{element.von.name}} </td>
+        </ng-container>
+
+        <!-- Nach Column -->
+        <ng-container matColumnDef="nach">
+            <th mat-header-cell *matHeaderCellDef> Nach </th>
+            <td mat-cell *matCellDef="let element"> {{element.nach.name}} </td>
+        </ng-container>
+
+        <!-- Kategorie Column -->
+        <ng-container matColumnDef="kategorie">
+            <th mat-header-cell *matHeaderCellDef> Kategorie </th>
+            <td mat-cell *matCellDef="let element"> {{element.kategorie.name}} </td>
+        </ng-container>
+
+        <!-- Größe Column -->
+        <ng-container matColumnDef="größe">
+            <th mat-header-cell *matHeaderCellDef> Größe </th>
+            <td mat-cell *matCellDef="let element"> {{element.groesse.name}} </td>
+        </ng-container>
+
+        <!-- Anzahl Column -->
+        <ng-container matColumnDef="anzahl">
+            <th mat-header-cell *matHeaderCellDef> Anzahl </th>
+            <td mat-cell *matCellDef="let element"> {{element.anzahl}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+            (click)="selection.toggle(row)">
+        </tr>
+    </table>
+
+    <div class="save-button">
+        <terra-button inputCaption="Buchen"
+                      (outputClicked)="_buchen()"
+                      [inputIsDisabled]="buchungsliste.length === 0">
+        </terra-button>
+    </div>
+
 </div>
 
-<div>
-    <terra-button inputCaption="Buchen"
-                  (outputClicked)="_buchen()"
-                  [inputIsDisabled]="_rowList.length === 0">
-    </terra-button>
-</div>
+
 
