- added additional styling

--- a/wbs-alarm/wbs-frontend/src/app/views/system/system.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/system.component.html
@@ -3,8 +3,8 @@
 <!--        <button mat-button (click)="snav.toggle()">Menü anzeigen</button>-->
 <!--    </mat-toolbar>-->
 
-    <div class="toggle-container">
-        <span class="icon-collapse_rightpng toggle-icon" (click)="snav.toggle()"></span>
+    <div [ngClass]="snav.opened ? 'stick-to-nav' : ''" class="toggle-container">
+        <span [ngClass]="snav.opened ? 'icon-collapse_left' : 'icon-collapse_rightpng'" class="toggle-icon" (click)="snav.toggle()"></span>
     </div>
     <mat-sidenav-container class="example-sidenav-container"
                            [style.marginTop.px]="mobileQuery.matches ? 0 : 0">
@@ -23,21 +23,3 @@
         </mat-sidenav-content>
     </mat-sidenav-container>
 </div>
-
-
-
-
-
-<!--<div class="container-fluid full-height">-->
-<!--    <div class="row full-height">-->
-<!--        <div class="tree-container col-sm-12 col-md-3 col-lg-2 ">-->
-<!--            <terra-node-tree [inputConfig]="nodeTreeConfig">-->
-<!--            </terra-node-tree>-->
-<!--        </div>-->
-<!--    -->
-<!--    -->
-<!--        <div class="outlet-container col-sm-12 col-md-9 col-lg-10">-->
-<!--            <router-outlet></router-outlet>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
