--- a/wbs-alarm/wbs-frontend/src/app/views/system/system.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/system.component.scss
@@ -76,6 +76,12 @@ h1.example-app-name {
     {
         width: 100%;
     }
+
+    .stick-to-nav
+    {
+        left: 94.4%;
+        animation: animateleft 0.4s;
+    }
 }
 
 // Medium devices (tablets, 768px and up)
@@ -84,6 +90,12 @@ h1.example-app-name {
     .more-width
     {
         width: 100%;
+    }
+
+    .stick-to-nav
+    {
+        left: 94.4%;
+        animation: animateleft 0.4s;
     }
 }
 
@@ -94,6 +106,12 @@ h1.example-app-name {
     {
         width: 15%;
     }
+
+    .stick-to-nav
+    {
+        left: 15%;
+        animation: animateleft 0.4s;
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
@@ -102,5 +120,11 @@ h1.example-app-name {
     .more-width
     {
         width: 15%;
+    }
+
+    .stick-to-nav
+    {
+        left: 15%;
+        animation: animateleft 0.4s;
     }
 }
