--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/bestaende/system-bestaende.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/bestaende/system-bestaende.component.html
@@ -37,24 +37,43 @@
     
     
     <terra-portlet>
-        <terra-simple-table #table
-                            [inputIsStriped]="true"
-                            [inputHasCheckboxes]="true"
-                            [inputUseHighlighting]="true"
-                            [inputHeaderList]="_headerList"
-                            [inputRowList]="_rowList"
-                            (outputHighlightedRowChange)="selectRow($event)">
-        </terra-simple-table>
+
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+            <!-- Checkbox Column -->
+            <ng-container matColumnDef="select">
+                <th mat-header-cell *matHeaderCellDef>Auswahl</th>
+                <td mat-cell *matCellDef="let row">
+                    <mat-checkbox (click)="$event.stopPropagation()"
+                                  (change)="$event ? selection.toggle(row) : null"
+                                  [checked]="selection.isSelected(row)">
+                    </mat-checkbox>
+                </td>
+            </ng-container>
+
+            <!-- Kategorie Column -->
+            <ng-container matColumnDef="kategorie">
+                <th mat-header-cell *matHeaderCellDef> Kategorie </th>
+                <td mat-cell *matCellDef="let element"> {{element.kategorie.name}} </td>
+            </ng-container>
+
+            <!-- Groesse Column -->
+            <ng-container matColumnDef="größe">
+                <th mat-header-cell *matHeaderCellDef> Größe </th>
+                <td mat-cell *matCellDef="let element"> {{element.groesse.name}} </td>
+            </ng-container>
+
+            <!-- Anzahl Column -->
+            <ng-container matColumnDef="anzahl">
+                <th mat-header-cell *matHeaderCellDef> Anzahl </th>
+                <td mat-cell *matCellDef="let element"> {{element.anzahl}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+                (click)="selection.toggle(row)">
+            </tr>
+        </table>
+
     </terra-portlet>
-    
-    <terra-overlay #bearbeitenOverlay
-                   inputOverlayTitle="Bestand ändern"
-                   [inputIsLarge]="true"
-                   [inputPrimaryButtonInterface]="primaryButtonInterface">
-        
-        <terra-number-input [inputName]="'Bestand ändern'"
-                            [(ngModel)]="_bestandAendernAnzahl">
-        </terra-number-input>
-    
-    </terra-overlay>
 </ng-container>
