--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/sizes/system-groessen.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/sizes/system-groessen.component.html
@@ -9,14 +9,44 @@
                       [inputIcon]="'icon-save'"
                       (outputClicked)="addGroesse()"></terra-button>
     </terra-portlet>
-    
-    <terra-simple-table #table
-                        [inputIsStriped]="true"
-                        [inputHasCheckboxes]="true"
-                        [inputUseHighlighting]="true"
-                        [inputHeaderList]="_headerList"
-                        [inputRowList]="_rowList"
-                        (outputHighlightedRowChange)="selectRow($event)">
-    </terra-simple-table>
+
+    <table mat-table [dataSource]="dataSource">
+
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null"
+                              [checked]="selection.hasValue() && isAllSelected()"
+                              [indeterminate]="selection.hasValue() && !isAllSelected()">
+                </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+                <mat-checkbox (click)="$event.stopPropagation()"
+                              (change)="$event ? selection.toggle(row) : null"
+                              [checked]="selection.isSelected(row)">
+                </mat-checkbox>
+            </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.groesse.name}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+            (click)="selection.toggle(row)">
+        </tr>
+    </table>
+
+<!--    <terra-simple-table #table-->
+<!--                        [inputIsStriped]="true"-->
+<!--                        [inputHasCheckboxes]="true"-->
+<!--                        [inputUseHighlighting]="true"-->
+<!--                        [inputHeaderList]="_headerList"-->
+<!--                        [inputRowList]="_rowList"-->
+<!--                        (outputHighlightedRowChange)="selectRow($event)">-->
+<!--    </terra-simple-table>-->
 </ng-container>
 
