- added password component

--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.scss
@@ -81,3 +81,9 @@
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
   background-color: #c0392b !important;
 }
+
+.reset-password-link
+{
+  color: var(--color-link);
+  cursor: pointer;
+}
