--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
@@ -36,11 +36,11 @@
             <div class="d-flex justify-content-center mt-3 login_container">
                 <button id="login-button" type="button" name="button" class="btn login_btn" (click)="login()">Login</button>
             </div>
-<!--            <div class="mt-4">-->
-<!--                <div class="d-flex justify-content-center links">-->
-<!--                    <a href="#">Passwort vergessen?</a>-->
-<!--                </div>-->
-<!--            </div>-->
+            <div class="mt-4">
+                <div class="d-flex justify-content-center links">
+                    <a class="reset-password-link" (click)="resetPassword()">Passwort vergessen?</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
