--- a/wbs-alarm/wbs-frontend/src/app/views/reports/bericht-view.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/reports/bericht-view.component.html
@@ -14,4 +14,41 @@
 
         <button mat-raised-button color="primary" (click)="createReport()">Bericht erzeugen</button>
     </mat-expansion-panel>
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 warenkorb">
+
+        <!-- Träger Column -->
+        <ng-container matColumnDef="traeger">
+            <th mat-header-cell *matHeaderCellDef> Träger </th>
+            <td mat-cell *matCellDef="let element"> {{element.von.name}} </td>
+        </ng-container>
+
+        <!-- Kategorie Column -->
+        <ng-container matColumnDef="kategorie">
+            <th mat-header-cell *matHeaderCellDef> Kategorie </th>
+            <td mat-cell *matCellDef="let element"> {{element.nach.name}} </td>
+        </ng-container>
+
+        <!-- Größe Column -->
+        <ng-container matColumnDef="größe">
+            <th mat-header-cell *matHeaderCellDef> Größe </th>
+            <td mat-cell *matCellDef="let element"> {{element.kategorie.name}} </td>
+        </ng-container>
+
+        <!-- Zielort Column -->
+        <ng-container matColumnDef="zielort">
+            <th mat-header-cell *matHeaderCellDef> Zielort </th>
+            <td mat-cell *matCellDef="let element"> {{element.groesse.name}} </td>
+        </ng-container>
+
+        <!-- Anzahl Column -->
+        <ng-container matColumnDef="anzahl">
+            <th mat-header-cell *matHeaderCellDef> Anzahl </th>
+            <td mat-cell *matCellDef="let element"> {{element.anzahl}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+        </tr>
+    </table>
 </ng-container>
