--- a/wbs-alarm/wbs-frontend/src/app/views/reports/bericht-view.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/reports/bericht-view.component.html
@@ -15,7 +15,7 @@
         <button mat-raised-button color="primary" (click)="createReport()">Bericht erzeugen</button>
     </mat-expansion-panel>
 
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 warenkorb">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 bericht">
 
         <!-- Träger Column -->
         <ng-container matColumnDef="traeger">
