--- a/wbs-alarm/wbs-frontend/src/app/views/reports/bericht-view.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/reports/bericht-view.component.html
@@ -12,7 +12,7 @@
             </mat-select>
         </mat-form-field>
 
-        <button mat-raised-button class="ml-2" color="primary" (click)="createReport()">Bericht erzeugen</button>
+        <button mat-raised-button class="ml-2" [disabled]="!trager" color="primary" (click)="createReport()">Bericht erzeugen</button>
     </mat-expansion-panel>
 
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 bericht">
