--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/reset-password/reset-password-dialog.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/reset-password/reset-password-dialog.component.html
@@ -6,7 +6,7 @@
     </span>
 
     <div>
-        <terra-number-input [(ngModel)]="username"></terra-number-input>
+        <terra-text-input [(ngModel)]="username"></terra-text-input>
     </div>
 </div>
 <div mat-dialog-actions>
