--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
@@ -1,14 +1,3 @@
-//.navigation-bar
-//{
-//    width: 100%;
-//    border-bottom: 1px solid white;
-//    background-color: var(--color-structure-12);
-//    z-index: 1;
-//    height: 4rem;
-//    display: flex;
-//    justify-content: flex-start;
-//}
-
 nav
 {
     width: 100%;
@@ -18,29 +7,7 @@ nav
 {
     cursor: pointer;
 }
-//
-//.menu-entry
-//{
-//    font-weight: var(--font-weight-2) !important;
-//    font-size: var(--font-size-2) !important;
-//    color: white;
-//    text-decoration: underline;
-//    border-right: 1px solid lightgray;
-//    padding-left: 20px;
-//    padding-right: 20px;
-//
-//    .caption
-//    {
-//        position: relative;
-//        top: 30%
-//    }
-//
-//    &:hover
-//    {
-//        background-color: var(--color-active);
-//        cursor: pointer;
-//    }
-    
+
     .user-icon
     {
         background-color: white;
@@ -50,9 +17,7 @@ nav
         position: relative;
         transform: translateY(-50%);
     }
-    
-    
-//}
+
 
 .right
 {
@@ -61,6 +26,14 @@ nav
     &:hover
     {
     }
+}
+
+.logout
+{
+    color: white;
+    margin-right: 15px;
+    cursor: pointer;
+    font-size: 34px;
 }
 
 
