- added additional steps to password recovery

--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/new-password/new-password.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/new-password/new-password.component.html
@@ -5,7 +5,9 @@
 
     <mat-form-field class="w-100">
         <mat-label>Neues Passwort</mat-label>
-        <input matInput placeholder="passwort" [(ngModel)]="password" value="">
+        <input matInput type="password" placeholder="passwort" [(ngModel)]="password" value="">
+        <mat-label>Passwort wiederholen</mat-label>
+        <input matInput type="password" placeholder="passwort" [(ngModel)]="repeatPassword" value="">
     </mat-form-field>
     <button mat-raised-button class="mt-2" color="primary" (click)="newPassword()">Abschicken</button>
 </div>
