- updated reset password component

--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/new-password/new-password.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/new-password/new-password.component.html
@@ -4,10 +4,16 @@
     <h1>WBS-Kleiderkammer Passwort zurücksetzen</h1>
 
     <mat-form-field class="w-100">
-        <mat-label>Neues Passwort</mat-label>
-        <input matInput type="password" placeholder="passwort" [(ngModel)]="password" value="">
-        <mat-label>Passwort wiederholen</mat-label>
-        <input matInput type="password" placeholder="passwort" [(ngModel)]="repeatPassword" value="">
+        <div>
+            <mat-label>Neues Passwort</mat-label>
+            <input matInput type="password" placeholder="passwort" [(ngModel)]="password" value="">
+        </div>
+    </mat-form-field>
+    <mat-form-field class="w-100">
+        <div>
+            <mat-label>Passwort wiederholen</mat-label>
+            <input matInput type="password" placeholder="passwort wiederholen" [(ngModel)]="repeatPassword" value="">
+        </div>
     </mat-form-field>
     <button mat-raised-button class="mt-2" color="primary" (click)="newPassword()">Abschicken</button>
 </div>
