--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/targetplaces/system-targetplaces.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/targetplaces/system-targetplaces.component.html
@@ -3,17 +3,17 @@
         <terra-button [inputIcon]="'icon-save'"
                       [inputCaption]="'Speichern'"
                       (outputClicked)="save(routeData.targetPlace)"
-                      [inputIsDisabled]="routeData.targetPlace.erfasst">
+                      [inputIsDisabled]="gesperrt">
         </terra-button>
         <terra-button [inputIcon]="'icon-delete'"
                       [inputCaption]="'Inaktiv setzen'"
                       (outputClicked)="delete(routeData.targetPlace)"
-                      [inputIsDisabled]="routeData.targetPlace.erfasst">
+                      [inputIsDisabled]="gesperrt">
         </terra-button>
         <terra-button [inputIcon]="'icon-visibility_public'"
                       [inputCaption]="'Für Erfassung sperren'"
                       (outputClicked)="lock(routeData.targetPlace)"
-                      [inputIsDisabled]="routeData.targetPlace.erfasst">
+                      [inputIsDisabled]="gesperrt">
         </terra-button>
     </terra-base-toolbar>
     
@@ -23,11 +23,11 @@
         </p>
         <terra-text-input [inputName]="'Name'"
                           [(ngModel)]="routeData.targetPlace.name"
-                          [inputIsDisabled]="routeData.targetPlace.erfasst">
+                          [inputIsDisabled]="gesperrt">
         </terra-text-input>
     </terra-portlet>
     
     <terra-portlet [inputPortletHeader]="'Bestände'">
-                <system-bestaende [zielortId]="routeData.targetPlace.id" [gesperrt]="routeData.targetPlace.erfasst"></system-bestaende>
+                <system-bestaende [zielortId]="routeData.targetPlace.id" [gesperrt]="gesperrt"></system-bestaende>
     </terra-portlet>
 </ng-container>
