--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/targetplaces/system-targetplaces.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/targetplaces/system-targetplaces.component.html
@@ -7,8 +7,7 @@
         </terra-button>
         <terra-button [inputIcon]="'icon-delete'"
                       [inputCaption]="'Inaktiv setzen'"
-                      (outputClicked)="delete(routeData.targetPlace)"
-                      [inputIsDisabled]="gesperrt">
+                      (outputClicked)="delete(routeData.targetPlace)">
         </terra-button>
         <terra-button [inputIcon]="'icon-visibility_public'"
                       [inputCaption]="'Für Erfassung sperren'"
