-fixed navbar on mobile

--- a/wbs-alarm/wbs-frontend/src/app/views/system/system.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/system.component.html
@@ -1,4 +1,4 @@
-<div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+<div id="container" class="example-container" [class.example-is-mobile]="mobileQuery.matches">
 <!--    <mat-toolbar color="primary" class="example-toolbar">-->
 <!--        <button mat-button (click)="snav.toggle()">Menü anzeigen</button>-->
 <!--    </mat-toolbar>-->
